# FastVisionOps

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
bbox-nms-c-version/: README.md  compile.md
benchmarks/: __init__.py  benchmark_bbox.py  benchmark_preprocess.py
docs/: evaluation.md
fastvisionops/: __init__.py  _validation.py  bbox.py  build.py  mask.py  native.py  preprocess.py
fastvisionops/native/: __init__.py  backend.py  build.py
fastvisionops/native/csrc/: vision_ops.c
fastvisionops/postprocess/: __init__.py  bbox.py  mask.py
fastvisionops/preprocess/: __init__.py
legacy/: README.md
legacy/bbox-nms/: nms.py
legacy/bbox-nms-c-version/: .gitignore  README.md  batch_parallel_nms.py  compile.md  nms.py
legacy/mask-nms/: README.md
mask-nms/: README.md  mask_nms.py
nmss/: __init__.py  _validation.py  bbox.py  build.py  c_backend.py  mask.py
nmss/csrc/: nms.c
tests/: test_bbox.py  test_c_backend.py  test_legacy_adapters.py  test_mask.py  test_native_preprocess.py  test_package_layout.py  test_preprocess.py
