[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastvisionops"
version = "1.0.0"
description = "Validated NumPy and native operations for vision inference"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[tool.setuptools.packages.find]
include = ["fastvisionops*", "nmss*"]

[tool.setuptools.package-data]
nmss = ["csrc/*.c"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
